# tkt-hack-meridian-2025

./: README.md
.next/: trace
contracts/: .gitignore  CLI_EXAMPLES.md  Cargo.toml  EXEMPLOS_CLI.md  IDL_GENERATION.md  Makefile  OTIMIZACOES.md  README.md  README_EVENTOS.md  build.rs  generate-idl.sh  generate_idl  generate_idl.rs  optimize.sh  payment_with_fee.idl.json  payment_with_fee.schema.json
contracts/bindings/src/: index.ts
contracts/src/: lib.rs  main.rs  test.rs  test_events.rs
frontend/: ARCHITECTURE.md  README.md  env.example  eslint.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/about/: page.tsx
frontend/app/contexts/: AuthContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/events/: page.tsx
frontend/app/events/create/: page.tsx
frontend/app/lib/: passkeyRegister.ts  passkeySoroban.ts  passkeyWallet.ts
frontend/app/payments/: page.tsx
frontend/app/types/: index.ts
frontend/app/utils/: README.md  api-client-factory.ts  api-client.ts  api-config.ts  example-usage.ts  horizon-client.ts  mock-api.ts  mock-data.ts  stellar-api-client.ts  stellar-config.ts  stellar-helpers.ts
frontend/components/features/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/features/dashboard/: BalanceCard.tsx  ChartsCard.tsx  (+4 more)
frontend/components/layout/: Navbar.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  index.ts
(+18 files in other folders)
