[package]
name = "payment-with-fee"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.2"

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "payment-with-fee"
path = "src/main.rs"

[profile.release]
opt-level = "z"          # Optimize for size
overflow-checks = true
debug = 0                # No debug info
strip = "symbols"        # Strip symbols
debug-assertions = false # No debug assertions
panic = "abort"          # Smaller panic handler
codegen-units = 1        # Better optimization
lto = true              # Link-time optimization
incremental = false     # Better optimization for release
rpath = false           # Reduce binary size

[profile.release-with-logs]
inherits = "release"
debug-assertions = true